# codemem

./: .gitignore  README.md  pyproject.toml
src/codemem/: __init__.py  __main__.py  cli.py  deadcode.py  engine.py  indexer.py  intent.py  mcp.py  models.py  planner.py  retrieval.py  store.py
src/codemem/analyzers/: __init__.py  base.py  javascript.py  python.py
tests/: support.py  test_engine.py  test_mcp.py
