[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemem"
version = "0.1.0"
description = "Local-first repository memory engine with a stdio MCP surface."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yousuf Khan" }]
dependencies = []

[project.scripts]
codemem = "codemem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
